# JNITemplate

./: .gitignore  README.md  build.gradle  config.gradle  javaapiconfigs  javaapiheaders  settings.gradle
app/: build.gradle
javaApi/: build.gradle
javaapiconfigs/: ohos_aafwk_ability.json  ohos_apitest.json  ohos_app.json  ohos_bundle_base.json  ohos_bundlemgr.json
javaapiheaders/: jni_method_flag.h  ohos_aafwk_ability.h  (+4 more)
jniLib/src/main/cpp/json/: CMakeLists.txt
jniLib/src/main/cpp/json/include/: jni_error.h  jni_info.h  jni_json_util.h  jni_log.h  jni_transform.h  jni_utils.h  js_call_android_jni.h  json_util.h  native.h
jniLib/src/main/cpp/json/include/android/: flog.h
jniLib/src/main/cpp/json/include/harmony/: jkit.h  nocopyable.h  singleton.h
jniLib/src/main/cpp/json/include/harmony/nlohmann/: json.hpp
jniLib/src/main/cpp/json/include/harmony/nlohmann/detail/: exceptions.hpp  json_pointer.hpp  value_t.hpp
jniLib/src/main/cpp/json/include/harmony/nlohmann/detail/conversions/: from_json.hpp  to_chars.hpp  to_json.hpp
jniLib/src/main/cpp/json/include/harmony/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp
jniLib/src/main/cpp/json/include/harmony/nlohmann/detail/iterators/: iter_impl.hpp  iteration_proxy.hpp  json_reverse_iterator.hpp  primitive_iterator.hpp
jniLib/src/main/cpp/json/include/harmony/nlohmann/detail/meta/: detected.hpp  type_traits.hpp
jniLib/src/main/cpp/json/include/harmony/nlohmann/detail/output/: binary_writer.hpp  output_adapters.hpp  serializer.hpp
jniLib/src/main/cpp/json/include/javaapiheaders/: java_method_code.h  jni_method_flag.h  ohos_aafwk_ability.h  ohos_apitest.h  ohos_app.h  ohos_bundle_base.h  ohos_bundlemgr.h
jniLib/src/main/cpp/json/include/test/: transform.h
jniLib/src/main/cpp/json/src/: jni_info.cpp  jni_transform.cpp  jni_utils.cpp  js_call_android_jni.cpp  native.cpp
jniLib/src/main/cpp/json/src/harmony/: jkit.cpp
jniLib/src/main/cpp/json/src/test/: transform.cpp
(+37 files in other folders)
